<resources>
    <string name="app_name">Hue Controller</string>
    <string name="switchThemeText">Switch Theme</string>
    <string name="switchToDarkTheme">Switch to Dark Theme</string>
    <string name="switchToLightTheme">Switch to Light Theme</string>
    <string name="allLightsButton">All Lights</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bridgeIPDescription">Please set the IP of your Hue Bridge below.</string>
    <string name="bridgeIPHint">eg. 192.168.1.10</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="addLightText">Add a Hue Light by entering the Serial Number below.</string>
    <string name="addLightHint">Serial Number has 6 digits (eg. AB12DE)</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="light_off">All Lights Off</string>
    <string name="light_on">All Lights On</string>
    <string name="lighton">LightOn</string>
    <string name="set_color">Set Color</string>
</resources>